prometheus/05-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
  annotations:
    prometheus.io/should_be_scraped: "true"
spec:
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
  selector:
    app: prometheus
